--- a/styles/main.css
+++ b/styles/main.css
@@ -61,7 +61,7 @@ body {
   }
 }
 
-.journey__step, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header, .primary, .alternate, .hero__content-rating p, .journey__step p, .hero__content-title {
+.journey__step, .pricing__option--title, .pricing__option--price, .review__description, .introduction__title, .journey__title, .pricing__header, .primary, .alternate, .hero__content-rating p, .journey__step p, .hero__content-title {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -69,17 +69,17 @@ body {
   letter-spacing: -2px;
 }
 
-.journey__step, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header {
+.journey__step, .pricing__option--title, .pricing__option--price, .review__description, .introduction__title, .journey__title, .pricing__header {
   font-size: 5rem;
   font-weight: 600;
   line-height: 1.3;
 }
 
-.journey__step, .pricing__option--title, .pricing__option--price {
+.journey__step, .pricing__option--title, .pricing__option--price, .review__description {
   font-size: 3.4rem;
 }
 
-.journey__step, .pricing__option--title, .pricing__option--price {
+.journey__step, .pricing__option--title, .pricing__option--price, .review__description {
   letter-spacing: -1px;
 }
 
@@ -93,7 +93,7 @@ body {
   line-height: 1.2;
 }
 
-.introduction__description span, .hero__content-description, .introduction__list--item, .introduction__description, .pricing__option--price span, .pricing__option--list-item {
+.introduction__description span, .hero__content-description, .introduction__list--item, .introduction__description, .pricing__option--price span, .pricing__option--list-item, .review__author {
   font-size: 2rem;
   font-family: "Inter";
   font-weight: 400;
@@ -118,7 +118,7 @@ body {
   line-height: 1.2;
 }
 
-.primary, .alternate, .hero, .hero__content-reviews, .introduction, .introduction__list, .introduction__list--item, .journey, .journey__step--number, .pricing, .pricing__option, .pricing__option--list, .pricing__option--list-item {
+.primary, .alternate, .hero, .hero__content-reviews, .introduction, .introduction__list, .introduction__list--item, .journey, .journey__step--number, .pricing, .pricing__option, .pricing__option--list, .pricing__option--list-item, .review {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -869,4 +869,20 @@ body {
     pointer-events: none;
     z-index: -1;
   }
+}
+
+.review {
+  max-width: 97rem;
+  margin: 0 auto 12rem;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+
+.review__description {
+  color: #062630;
+  text-align: center;
+}
+
+.review__author {
+  color: #385159;
 }
